<resources>
    <string name="app_name">Liosi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mood_title">Bagaimana Perasaanmu\nHari Ini ?</string>
    <string name="mood_subtitle">I Need Help !</string>

    <string name="next">next</string>
    <string name="user">User</string>
    <string name="selamat_pagi">Selamat pagi</string>
    <string name="start">Start</string>
    <string name="todo">What to do next ?</string>
    <string name="premium">Talk with psychologist</string>

    <string name="breathe">Tarik Nafas Dengan Dalam</string>
    <string name="muscle">Relaksasi Otot</string>
    <string name="positif">Visualisasi Positif</string>

    <string name="menu_breathe_1">Latar Suara</string>
    <string name="menu_breathe_2">Durasi Bernafas</string>
    <string name="menu_breathe_3">Background</string>

    <string name="menu_muscle_1">Balasana</string>
    <string name="menu_muscle_2">Viparita Korani</string>
    <string name="menu_muscle_3">Makarasona</string>
    <string name="menu_muscle_4">Savasana</string>

    <string name="detail_muscle_1">Balasana menyerupai posisi janin bayi. Balasana melepaskan ketengangan di pungguung, bahu, dan dada. Efektif untuk mengurangi stress dan kecemasan</string>
    <string name="detail_muscle_2">Viparita Korani adalah solusi berbagai masalah. Berfungsi mengatur aliran darah, mengurangi bengkak pada kaki dan sakit punggung</string>
    <string name="detail_muscle_3">Makarasona menyerupai buaya dengan kepala diatas air. Makarasona merilekskan bahu dan punggung, mengurangi kelelahan</string>
    <string name="detail_muscle_4">Savasana adalah posisi relaksasi klasik. Ini mengharuskan Anda tidur terlentang. Savana menenangkan semua otot dan merangsang sirkulasi darah</string>

    <string name="menu_premium_1">Paket Perkenalan\n Rp100.000 tiap sesi</string>
    <string name="menu_premium_2">Paket Bahagia (12x sesi) Rp75.000 tiap sesi \n total Rp980.000</string>
    <string name="menu_premium_3">Paket Tenang (4x sesi) Rp90.000 tiap sesi \n total Rp360.000</string>
    <string name="menu_premium_4">Paket Bahagia (12x sesi) Rp75.000 tiap sesi \n total Rp980.000</string>

    <string name="positif_subtitle">Ungkapkan kata-kata positif yang akan merubah dirimu</string>
    <string name="positif_subtitle2">Tahan untuk mulai bicara</string>

    <string name="psikolog">Pilih Psikolog</string>

    <string name="breathe_detail">Setelah mengungkapkan mari meditasi sejenak</string>
    <string name="breathe_subdetail">Posisikan dirimu di tempat yang tenang dan kondusif, lebih baik di tempat sepi.</string>
    <string name="btn_breathe">Yuk mulai</string>

    <string name="username">Username</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="umur">Umur</string>
    <string name="email">Email</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="sudah_punya_akun">Sudah punya akun ?</string>

    <string-array name="gender_array">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>


</resources>