<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_positif"
    tools:context=".data.view.fragment.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="114dp"
            android:layout_height="124dp"
            android:src="@drawable/logo_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/bg_button_rounded_white"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/nama_lengkap"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_normal"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintVertical_bias="0.023" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/bg_button_rounded_white"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/username"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_normal"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_umur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/bg_button_rounded_white"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/umur"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_normal"
            android:inputType="number"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/sp_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/bg_spinner_rounded"
            android:entries="@array/gender_array"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_umur"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/bg_button_rounded_white"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/email"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_normal"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sp_gender"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/bg_button_rounded_white"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/password"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_normal"
            android:inputType="textPassword"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_konfirmasi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/bg_button_rounded_white"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/konfirmasi_password"
            android:paddingHorizontal="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_normal"
            android:inputType="textPassword"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button_rounded_white"
            android:fontFamily="@font/montserrat_medium"
            android:paddingHorizontal="@dimen/margin_jumbo"
            android:text="@string/buat_akun"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_konfirmasi_password"
            app:layout_constraintVertical_bias="0.299" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="144dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sudah_punya_akun"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_login"
            app:layout_constraintHorizontal_bias="0.605"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_daftar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="120dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/daftar"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_daftar"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>