<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_home_positif"
    tools:context=".data.view.fragment.PositifFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="44dp"
        android:layout_height="43dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@+id/appCompatImageView"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="84dp"
        android:layout_height="93dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/positif"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/margin_large"
        android:fontFamily="@font/montserrat_medium"
        android:padding="@dimen/margin_normal"
        android:text="@string/positif_subtitle"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintVertical_bias="0.0" />


    <at.markushi.ui.CircleButton
        android:id="@+id/circleButton"
        android:layout_width="179dp"
        android:layout_height="165dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_mic_150"
        app:cb_color="@color/colorGrey"
        app:cb_pressedRingWidth="8dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        app:layout_constraintVertical_bias="0.162" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/montserrat_medium"
        android:padding="@dimen/margin_normal"
        android:text="@string/positif_subtitle2"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleButton"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/appCompatSeekBar"
        android:layout_width="257dp"
        android:layout_height="19dp"
        android:layout_marginTop="68dp"
        android:background="@color/colorWhite"
        android:secondaryProgressTint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    <at.markushi.ui.CircleButton
        android:id="@+id/play_button"
        android:layout_width="60dp"
        android:layout_height="77dp"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_play_arrow_150"
        app:cb_color="@color/colorGrey"
        app:cb_pressedRingWidth="8dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatSeekBar" />

    <at.markushi.ui.CircleButton
        android:id="@+id/pause_button"
        android:layout_width="60dp"
        android:layout_height="77dp"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_pause_150"
        android:visibility="gone"
        app:cb_color="@color/colorGrey"
        app:cb_pressedRingWidth="8dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatSeekBar" />


</androidx.constraintlayout.widget.ConstraintLayout>